[package]
name = "futures-async-combinators"
version = "0.3.2"
authors = ["Roman Proskuryakov <humbug@deeptown.org>"]
description = "toy futures combinators"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/kpp/futures-async-combinators"
repository = "https://github.com/kpp/futures-async-combinators"
keywords = ["async", "await", "futures"]
edition = "2018"

[badges]
travis-ci = { repository = "kpp/futures-async-combinators" }
coveralls = { repository = "kpp/futures-async-combinators" }
# Available options are `actively-developed`, `passively-maintained`,
# `as-is`, `none`, `experimental`, `looking-for-maintainer`, `deprecated`.
maintenance = { status = "experimental" }

[dependencies]
pin-utils = "=0.1.0-alpha.4"
futures-core = "0.3"

[dev-dependencies]
futures = "0.3"
criterion = "0.3"

[[bench]]
name = "stream"
harness = false

[[bench]]
name = "future"
harness = false

[profile.bench]
opt-level = 3
debug = false
lto = true
debug-assertions = false
